# mindshard-studio

./: .gitignore  README.md  environment.lock.yml  environment.windows.lock.yml  environment.yml  kill-the-uvicorn.sh  pyproject.toml  update-repo.sh
_wiget-ideas/backend-loader/: App.tsx  constants.ts  index.html  metadata.json  package.json  types.ts
_wiget-ideas/backend-loader/components/: LoaderWidget.tsx  LoadingItem.tsx
_wiget-ideas/backend-loader/components/icons/: ActionIcons.tsx  CheckIcon.tsx  CircleIcon.tsx  SpinnerIcon.tsx
_wiget-ideas/frontend-loader/: App.tsx  index.html  metadata.json  package.json  types.ts
_wiget-ideas/frontend-loader/components/: Icons.tsx  LoaderItem.tsx
backend/: config.py  core_models.py  digestor.py  digestor_manager.py  embedding.py  main.py  memory_layers.py  memory_manager.py  model_controller.py  observability.py  prompt_manager.py  security.py  summarizer.py  utils.py  vector_store.py
backend/api/: knowledge_manager_api.py  memory_api.py  meta_tools_api.py  orchestrator_api.py  project_tools_api.py  prompt_api.py  rag_api.py  roles_api.py  system_api.py  task_api.py  versioning_api.py  workflow_api.py
backend/factories/: project_engine.py
data/: mindshard.db
frontend/: App.tsx  index.html  index.tsx  metadata.json  package-lock.json  package.json  types.ts
frontend/components/: FrameBox.tsx  Icons.tsx  ModelStatusChip.tsx  NativeMenuBar.tsx  NavBar.tsx  ProjectPanel.tsx  RightSideContainer.tsx
frontend/components/common/: FolderPickerModal.tsx  LoadingSpinner.tsx
frontend/components/panels/: BrowserPanel.tsx  InferencePanel.tsx  IngestionPanel.tsx  KnowledgePanel.tsx  MemoryDebugStreamPanel.tsx  MemoryPanel.tsx  ProjectToolsPanel.tsx  PromptManagerPanel.tsx  RolePanel.tsx  SettingsPanel.tsx  SystemMonitorPanel.tsx  TaskListPanel.tsx  TextEditorPanel.tsx  VersioningPanel.tsx  WorkflowView.tsx
frontend/data/: mindshard.db
frontend/hooks/: queries.ts  useAPI.ts  useLocalStorage.ts  useNotify.ts  useTauriStore.ts
frontend/services/: mindshardService.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/stores/: appStore.ts
frontend/utils/: fileFilters.ts
